# kde-abrt

./: CMakeLists.txt  README.md  dataclass.cpp  dataclass.cpp~  dataclass.h  dataclass.h~  dbus.cpp  dbus.h  main.cpp  mainwindow.cpp  mainwindow.h  mymodel.cpp  mymodel.h  mymodel.h~  problemdata.cpp  problemdata.h
src/: CMakeLists.txt  customsearchline.cpp  customsearchline.h  dbus.cpp  dbus.h  kde-abrt.desktop  kde-abrtui.rc  main.cpp  mainwindow.cpp  mainwindow.h  problemdata.cpp  problemdata.h  ui_mainwindow.h
